--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Harshika's Digital World</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
 
@@ -91,10 +105,47 @@
                     <tr>
                         <th>ClassWorks</th>
                         <th>HomeWorks</th>
+                        <th>Projects</th>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://codd.cs.gsu.edu/~hjonnalagadda1/WP/CW/0/index.html">ClassWork 0</a></td>
+                        <td><a target="_blank" href="https://codd.cs.gsu.edu/~hjonnalagadda1/WP/CW/0/index.html">ClassWork 1</a></td>
                         <td><a target="_blank" href="#">HomeWork 1</a></td>
+                        <td><a target="_blank" href="#">Project 1</a></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="#">ClassWork 2</a></td>
+                        <td><a target="_blank" href="#">HomeWork 2</a></td>
+                        <td><a target="_blank" href="#">Project 2</a></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="#">ClassWork 3</a></td>
+                        <td><a target="_blank" href="#">HomeWork 3</a></td>
+                        <td><a target="_blank" href="#">Project 3</a></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="#">ClassWork 4</a></td>
+                        <td><a target="_blank" href="#">HomeWork 4</a></td>
+                        <td><a target="_blank" href="#">Project 4</a></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="#">ClassWork 5</a></td>
+                        <td><a target="_blank" href="#">HomeWork 5</a></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="#">ClassWork 6</a></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="#">ClassWork 7</a></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="#">ClassWork 8</a></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                 </table>
             </div>
